# VulkanLearning

./: .clang-format  .gitignore  CMakeLists.txt  ClothSimulator.sln  ClothSimulator.vcxproj.filters  README.md
ClothSimulator/: CMakeLists.txt  ClothSimulator.vcxproj
ClothSimulator/config/: conf.json  config.json  fast_config.json  pbd_config.json  pd_config.json  semi_config.json
ClothSimulator/lib/: spdlog.lib
ClothSimulator/scripts/: profiling.py
ClothSimulator/src/: main.cpp
ClothSimulator/src/geometries/: Primitives.cpp  Primitives.h  Triangulator.cpp  Triangulator.h
ClothSimulator/src/scenes/: ArcBallCamera.cpp  ArcBallCamera.h  BaraffScene.h  CMakeLists.txt  CameraBase.cpp  CameraUtil.h  DrawScene.cpp  DrawScene.h  DrawSceneVk.cpp  FPSCamera.h  FastSimScene.cpp  FastSimScene.h  ImplicitScene.cpp  ImplicitScene.h  MassSpringScene.cpp  MassSpringScene.h  MassSpringSceneGeo.cpp  PBDScene.cpp  PBDScene.h  PDScene.cpp  PDScene.h  Perturb.cpp  Perturb.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SemiImplicitScene.cpp  SemiImplicitScene.h  SemiImplicitSceneGeo.cpp  SimScene.cpp  SimScene.h  TrimeshScene.cpp  TrimeshScene.h
ClothSimulator/src/scenes/cameras/: ArcBallCamera.h  CameraBase.h  CameraUtil.cpp  FPSCamera.cpp
ClothSimulator/src/shaders/: CMakeLists.txt  compile.bat  shader.frag  shader.vert
ClothSimulator/src/utils/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  LogUtil.cpp  LogUtil.h  MathUtil.cpp  MathUtil.h  TimeUtil.cpp  TimeUtil.hpp
ClothSimulator/src/utils/json/: CMakeLists.txt
archive/learning/: bak.py  dataset_distribution_checker.py  inference_test_data.py  multiview_net.py  resnet_backbone_core.py  train.py
calibration/: calc_world_pts_to_obj_coords.py  calculate_extrinsics.py  calculate_extrinsics_for_color.py  calculate_extrinsics_for_ir_images.py  calculate_extrinsics_for_passiveir.py  calculate_intrinsics_from_ir_images.py  calib_config.json  device_util.py  device_utils.py  dll_util.py  drawer_util.py  file_util.py  inference_real_sample.py  log_util.py  multiview_depth_checker.py  multiview_depth_cutter.py  multiview_depth_fixer.py  multiview_depth_masker.py  multiview_depth_reviewer.py  multiview_depth_sampler.py  opencv_calibration.py  take_calibration_images.py  take_color_depth_stream.py  take_color_image.py  take_depth_image.py  take_depth_image_and_compare.py  take_valid_passive_ir_images.py
cmake/: FindOptiX.cmake  configure_movecmd.cmake
config/: batch_config.json  data_process.json  data_synthesis.json  implicit_conf.json  mesh_vis_config.json  pbd_config.json  pd_config.json  se_config.json  semi_config.json
config/sim_configs/: fem_config.json  implicit_conf.json  mesh_vis_config.json  pbd_config.json  pd_config.json  se_config.json  semi_config.json  show_config.json
config/train_configs/: conv_conf.json  fc_conf.json  train_config.json  (+2 more)
learning/: axon.py  calib_axon.py  captured_depth_test.py  data_loader.py  dataset.py  dataset_distribution_checker.py  ddp_train.py  device_test.py  diff_depth_image.py  image_data_loader.py  image_data_loader_dist.py  infer.py  nas.py  net_core.py  param_net.py  python_raycasting.py  realsense.py  remote_display.ipynb  res_param_net.py  resnet_core.py  save_depth_image.py  save_ir_image.py  train.py  vgg16_backbone_core.py
new_learning/: aug.ipynb  dataaug.py  dataset.py  ddp_train.py  resnet_core.py  test.py  train.py
scripts/: cal_camera_focus.py  calc_machine_weight.py  calc_sample_cost.py  draw_cloth_data.py  exr_viewer.py  gen_camera_pos.py  gen_circle_fixed_pts_uv.py  gen_isotropic_sampling_config.py  gen_property_sampling_config.py  image_data_noise_vis.py  realsense.py
src/: main.cpp
src/axon/: CMakeLists.txt  DepthSampler.cpp  DepthSampler.h  VideoManager.cpp  VideoManager.h  depth_sampler.cpp  video_manager_pybind_export.cpp
src/devices/: AxonManager.cpp  AxonManager.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  KinectManager.cpp  KinectManager.h  device_manager_pybind_export.cpp
src/geometries/: CMakeLists.txt  CollisionDetecter.cpp  CollisionDetecter.h  CollisionInfo.cpp  CollisionInfo.h  CollisionManager.cpp  CollisionManager.h  ObjExport.cpp  ObjExport.h  Optix7.h  OptixCUDABuffer.h  OptixDevicePrograms.cu  OptixLaunchParam.h  OptixRaycaster.cpp  OptixRaycaster.h  Primitives.cpp  Primitives.h  Raycaster.cpp  Raycaster.h  Triangulator.cpp  Triangulator.h
src/scenes/: BaraffScene.cpp  BaraffScene.h  CMakeLists.txt  DrawScene.cpp  DrawScene.h  DrawSceneShot.cpp  DrawSceneVk.cpp  EmptyCloth.cpp  EmptyCloth.h  ForceAnaScene.h  ImplicitScene.cpp  LinctexCloth.cpp  LinctexCloth.h  LinctexScene.cpp  LinctexScene.h  MeshVisScene.cpp  MeshVisScene.h  PBDScene.cpp  PBDScene.h  PDScene.cpp  PDScene.h  Perturb.cpp  Perturb.h  ProcessTrainDataScene.cpp  ProcessTrainDataScene.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SemiImplicitScene.cpp  SemiImplicitScene.h  SimScene.cpp  SimScene.h  SynDataScene.cpp  SynDataScene.h  process_traindata_scene_pybind_export.cpp
src/scenes/cameras/: ArcBallCamera.cpp  ArcBallCamera.h  CameraBase.cpp  CameraBase.h  CameraUtil.h  FPSCamera.cpp  FPSCamera.h
src/shaders/: CMakeLists.txt
src/sim/: BaseCloth.cpp  BaseCloth.h  BaseObject.cpp  BaseObject.h  CMakeLists.txt  ClothBuilder.h  ClothProperty.cpp  ClothProperty.h  ClothPropertyManager.cpp  ClothPropertyManager.h  CollisionDetecter.cpp  CollisionDetecter.h  KinematicBody.cpp  KinematicBody.h  KinematicBodyBuilder.cpp  KinematicBodyBuilder.h  PBDCloth.h  SemiCloth.cpp  SemiCloth.h
src/sim/cloth/: BaseCloth.cpp  BaseCloth.h  ClothBuilder.cpp  ClothBuilder.h  ClothProperty.cpp  ClothProperty.h  ClothPropertyManager.cpp  ClothPropertyManager.h  FEMCloth.cpp  FEMCloth.h  ImplicitCloth.cpp  ImplicitCloth.h  PBDCloth.cpp  PBDCloth.h  PDCloth.cpp  PDCloth.h  SemiCloth.cpp  SemiCloth.h
src/utils/: CMakeLists.txt  DefUtil.h  DepthEXRSaver.cpp  DepthImageSaver.cpp  FileUtil.cpp  FileUtil.h  JsonUtil.cpp  JsonUtil.h  LogUtil.h  MPIUtil.cpp  MPIUtil.h  MathUtil.cpp  MathUtil.h  MathUtil2.cpp  ObjUtil.cpp  ObjUtil.h  SysUtil.cpp  TimeUtil.cpp  TimeUtil.hpp
(+38 files in other folders)
